# moraband

./: .clang-format  .clang-format-ignore  .gitignore  CMakeLists.txt  MagicMoves.cpp  MagicMoves.hpp  Moraband  Moraband-fast  README.md  arasan2024.epd  bitboard.cpp  bitboard.h  black.txt  board.cpp  board.h  book.h  book.txt  defs.h  eval.cpp  eval.h  history.h  io.h  main.cpp  makefile  moraband.cpp  move.h  movegen.cpp  movegen.h  nnue.cpp  nnue.h  perft.cpp  perft.h  position.cpp  position.h  pst.h  search.cpp  search.h  search.txt  state.cpp  state.h  (+18 more)
.github/workflows/: c-cpp.yml  cmake-single-platform.yml
python/nnue/: gen_evals.py  requirements.txt  train.py
python/test/: test_positions.txt  wac.py
